# MIECT

1ºAno/1º Semestre/Labi/: labi.txt
1ºAno/2º Semestre/Labi/Guiao15/: 1.py
1ºAno/2º Semestre/Labi/client-server/: client.py  clientes.txt  report.csv  server.py
1ºAno/2º Semestre/Programação II/aula02/: Contacto.java  Data.java  DatasPassadas.java  TestComplex.java  TestData1.java
1ºAno/2º Semestre/Programação II/aula03/: Agenda.java  House.java  Point.java  Room.java  SortDates1.java  Tarefa.java  TestAgenda.java
1ºAno/2º Semestre/Programação II/aula04/: Data.java  GuessGame.java  PlayGuessGame.java  Tarefa.java  TestData3.java  TestFractions.java
1ºAno/2º Semestre/Programação II/aula05/: CopyFile.java  CutColumn.java  GuessGame.java  ListDir.java  PlayGuessGame.java  Texto1.txt
1ºAno/2º Semestre/Programação II/aula06/: Fibonacci.java  ListRec.java  PrintArgs.java  ReverseArgs.java  reverseString.java
1ºAno/2º Semestre/Programação II/aula07/: FilterLines.java  FilterLines2.java  ListRec2.java  input.txt
1ºAno/2º Semestre/Programação II/aula08/: NodeInt.java  SortInts.java  SumArgs.java
2º Ano/1º Semestre/RC/: Redes.txt
2º Ano/2º Semestre/AS/aula01/: Exerc2.vpp.bak_000f
2º Ano/2º Semestre/AS/aula02/: exerc2.vpp.bak_001d
2º Ano/2º Semestre/AS/aula03/: untitled.vpp  untitled.vpp.bak_000f  untitled.vpp.bak_002d
2º Ano/AC I/: teste_de_ac1.txt
2º Ano/AC I/Prática/Exercícios Random/: random1.asm
2º Ano/AC I/Prática/Guião1/: exerc2.asm
2º Ano/AC I/Prática/Guião10/: exerc2.asm
2º Ano/AC I/Prática/Guião11/: exerc1b.asm
2º Ano/AC I/Prática/Guião2/: exer2c.asm  exerc2d.asm  exerc3a_b.asm  exerc3d.asm
2º Ano/AC I/Prática/Guião3/: exerc2a.asm
2º Ano/AC I/Prática/Guião4/: exerc2a.asm  exerc3a.asm
2º Ano/AC I/Prática/Guião7/: exerc1a.asm
2º Ano/AC I/Prática/Guião9/: exerc1.asm
2º Ano/AC I/Prática/TP1/: exerc3.asm
2º Ano/RC/RC1Project-main/: README.md
2ºAno/1º Semestre/AC I/: Resumo.txt
2ºAno/1º Semestre/FE/: Ficha1.txt  Ficha2.txt
2ºAno/2º Semestre/AS/aula01/: Exerc2.vpp  Exerc2.vpp.bak_001d
2ºAno/2º Semestre/AS/aula02/: exerc2.vpp  exerc2.vpp.bak_000f
2ºAno/2º Semestre/AS/aula03/: untitled.vpp.bak_001d
2ºAno/2º Semestre/POO/: words.txt
3ºAno/1ºSemestre/IA/pratica/: aula1.py  aula2.py
3ºAno/1ºSemestre/MPEI/PL03/: sup02.m
3ºAno/1ºSemestre/MPEI/guiao1/: ex01a.asv  ex01b.m  ex02.m  ex03.m  ex4b.m  (+4 more)
3ºAno/2ºSemestre/BD/: resumo.txt
3ºAno/2ºSemestre/IHC/: resumo_aulas_T.txt
4ºAno/1ºSemestre/IC/P/trab2/src/: CMakeLists.txt  Makefile  brightness.cpp  codec_golomb.h  extract_color.cpp  golomb_codec.cpp  golomb_coder.cpp  golomb_coder.h  image_processing.h  mirror_image.cpp  negative_image.cpp  rotate_image.cpp
4ºAno/1ºSemestre/IC/P/trab3/src/: 2codec_image.h  CMakeLists.txt  Makefile  codec_image.h  codec_video.cpp  codec_video.h  codec_video_tests.cpp  decoder_image.cpp  encoder_image.cpp  golomb.h  main_intra_decoder.cpp  main_intra_encoder.cpp  video_utils.h
(+515 files in other folders)
